--- a/packages/alfa-scraper/package.json
+++ b/packages/alfa-scraper/package.json
@@ -26,6 +26,7 @@
     "@siteimprove/alfa-puppeteer": "^0.5.0",
     "@siteimprove/alfa-result": "^0.5.0",
     "@siteimprove/alfa-time": "^0.5.0",
+    "@siteimprove/alfa-url": "^0.5.0",
     "@siteimprove/alfa-web": "^0.5.0",
     "@types/puppeteer": "^3.0.1",
     "puppeteer": "^5.2.1"
