--- a/packages/alfa-graph/tsconfig.json
+++ b/packages/alfa-graph/tsconfig.json
@@ -16,6 +16,9 @@
       "path": "../alfa-map"
     },
     {
+      "path": "../alfa-sequence"
+    },
+    {
       "path": "../alfa-set"
     },
     {
