Implement traversal API for `Graph` (#426)

--- a/packages/alfa-graph/tsconfig.json
+++ b/packages/alfa-graph/tsconfig.json
@@ -16,7 +16,7 @@
       "path": "../alfa-map"
     },
     {
-      "path": "../alfa-option"
+      "path": "../alfa-sequence"
     },
     {
       "path": "../alfa-set"
