Improve handling of cyclic `aria-owns` references

--- a/packages/alfa-aria/tsconfig.json
+++ b/packages/alfa-aria/tsconfig.json
@@ -44,6 +44,9 @@
       "path": "../alfa-equatable"
     },
     {
+      "path": "../alfa-graph"
+    },
+    {
       "path": "../alfa-hash"
     },
     {
