--- a/packages/alfa-aria/package.json
+++ b/packages/alfa-aria/package.json
@@ -27,6 +27,7 @@
     "@siteimprove/alfa-device": "^0.5.0",
     "@siteimprove/alfa-dom": "^0.5.0",
     "@siteimprove/alfa-equatable": "^0.5.0",
+    "@siteimprove/alfa-graph": "^0.5.0",
     "@siteimprove/alfa-hash": "^0.5.0",
     "@siteimprove/alfa-iterable": "^0.5.0",
     "@siteimprove/alfa-json": "^0.5.0",
