Initial support for stateful pseudo class style resolution

--- a/packages/alfa-cascade/tsconfig.json
+++ b/packages/alfa-cascade/tsconfig.json
@@ -26,6 +26,9 @@
       "path": "../alfa-iterable"
     },
     {
+      "path": "../alfa-json"
+    },
+    {
       "path": "../alfa-media"
     },
     {
