--- a/packages/alfa-cascade/package.json
+++ b/packages/alfa-cascade/package.json
@@ -23,6 +23,7 @@
     "@siteimprove/alfa-device": "^0.5.0",
     "@siteimprove/alfa-dom": "^0.5.0",
     "@siteimprove/alfa-iterable": "^0.5.0",
+    "@siteimprove/alfa-json": "^0.5.0",
     "@siteimprove/alfa-media": "^0.5.0",
     "@siteimprove/alfa-option": "^0.5.0",
     "@siteimprove/alfa-predicate": "^0.5.0",
