--- a/packages/alfa-selector/package.json
+++ b/packages/alfa-selector/package.json
@@ -23,6 +23,7 @@
     "@siteimprove/alfa-equatable": "^0.5.0",
     "@siteimprove/alfa-iterable": "^0.5.0",
     "@siteimprove/alfa-json": "^0.5.0",
+    "@siteimprove/alfa-map": "^0.5.0",
     "@siteimprove/alfa-option": "^0.5.0",
     "@siteimprove/alfa-parser": "^0.5.0",
     "@siteimprove/alfa-predicate": "^0.5.0",
