--- a/packages/alfa-style/package.json
+++ b/packages/alfa-style/package.json
@@ -35,6 +35,7 @@
     "@siteimprove/alfa-option": "^0.5.0",
     "@siteimprove/alfa-parser": "^0.5.0",
     "@siteimprove/alfa-record": "^0.5.0",
+    "@siteimprove/alfa-selector": "^0.5.0",
     "@siteimprove/alfa-set": "^0.5.0",
     "@siteimprove/alfa-slice": "^0.5.0"
   },
